--- a/index-node/Dockerfile
+++ b/index-node/Dockerfile
@@ -42,11 +42,6 @@ FROM ${ESGF_HUB}/esgf-tomcat:$ESGF_VERSION
 
 MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
 
-# Install jq to allow us to easily parse responses from Solr during setup
-RUN apt-get update && \
-    apt-get install -y jq && \
-    rm -rf /var/lib/apt/lists/*
-
 # Copy the unpacked webapp from the previous build stage
 # Ensure it is owned by the tomcat user and root group, as we want any user in
 # the root group to be able to run the container
@@ -54,18 +49,18 @@ COPY --from=esg-search-unpack --chown=1001:0 /opt/esg-search $CATALINA_HOME/weba
 
 # Make sure esgf_shards.xml is recognised as a shards file as well as esgf_shards_static.xml
 RUN sed -i \
-        "s/\/esg\/config\/esgf_shards_static\.xml/\/esg\/config\/esgf_shards\.xml, \0/g" \
-        $CATALINA_HOME/webapps/esg-search/WEB-INF/classes/esg/search/config/application-context.xml
+      "s/\/esg\/config\/esgf_shards_static\.xml/\/esg\/config\/esgf_shards\.xml, \0/g" \
+      $CATALINA_HOME/webapps/esg-search/WEB-INF/classes/esg/search/config/application-context.xml
 
 # Install environment customisations
+# Make sure this runs before the config interpolation
+COPY scripts/check-variables.sh /tomcat-init.d/01-check-variables.sh
 # Ensure the config directory is owned by the tomcat user and root group
 RUN mkdir -p /esg/config && chown 1001:0 /esg/config && chmod 775 /esg/config
 COPY --chown=1001:0 --from=configuration /esg/config /esg/config
 # Make sure the config interpolation runs first by giving it a low ordinal
-COPY --from=configuration /opt/esgf-docker/scripts/interpolate-configs.sh /tomcat-init.d/01-interpolate.sh
+COPY --from=configuration /opt/esgf-docker/scripts/interpolate-configs.sh /tomcat-init.d/02-interpolate.sh
 COPY scripts/setenv.sh $CATALINA_HOME/bin/
-# Make sure this runs after the config interpolation
-COPY scripts/create-indices.sh /tomcat-init.d/02-create-indices.sh
 
 # Run as the tomcat user by default
 USER 1001
