Set up CI for ESGF-based repository

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -5,12 +5,13 @@
 ## a builder image to check out the code and build wheels for all our dependencies
 #####
 
-ARG ESGF_HUB=cedadev
+ARG ESGF_HUB=esgfhub
+ARG ESGF_PREFIX=
 ARG ESGF_VERSION=latest
 
 # This build stage is required because COPY --from=$ARG is not supported
 # https://github.com/moby/moby/issues/34482
-FROM ${ESGF_HUB}/esgf-configure:${ESGF_VERSION} as configuration
+FROM ${ESGF_HUB}/${ESGF_PREFIX}configure:${ESGF_VERSION} as configuration
 
 FROM python:2.7-slim AS esgf-auth-build
 
@@ -38,7 +39,7 @@ RUN mkdir /pip-wheels && \
 ## Stage 2 ##
 #############
 
-FROM ${ESGF_HUB}/esgf-django:${ESGF_VERSION}
+FROM ${ESGF_HUB}/${ESGF_PREFIX}django:${ESGF_VERSION}
 
 MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
 
