--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 # Default environment values used by ESGF/Docker
 # Note that any value defined in the shell takes precedence over values defined in this file.
 
-ZOOKEEPER_VERSION=3.4
-
-ESGF_HUB=cedadev
+ESGF_HUB=esgfhub
+ESGF_PREFIX=
 ESGF_VERSION=latest
