--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,6 @@ script:
         wait $command_pid
         local command_status=$?
         kill -9 $echo_pid
-        echo "COMMAND STATUS: " "$command_status"
         if [ "$command_status" -ne "0" ]; then
             exit $command_status
         fi
@@ -39,9 +38,9 @@ script:
     # If not, use the output of git-describe
     export ESGF_VERSION="${TRAVIS_TAG:-"$(git describe --always --tags)"}"
     keep_alive docker-compose build
-    echo "BUILD COMPLETE"
     # If this is a pull request, we are done - all we wanted to do is check it builds
-    if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+    if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then
+        echo "PR #${TRAVIS_PULL_REQUEST} built successfully - exiting"
         exit
     fi
     # If it is not a pull request, then push the tag to Docker Hub
