--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     # This uses a YAML anchor so that these are easy to reference elsewhere
     environment: &config_env
       ESGF_HOSTNAME:
-      ESGF_DATABASE_HOST: esgf-postgres-esgcet
+      ESGF_DATABASE_HOST: esgf-postgres-security
 
   # Build dependency only
   esgf-postgres:
@@ -73,7 +73,8 @@ services:
     image: "${ESGF_HUB}/${ESGF_PREFIX}publisher:${ESGF_VERSION}"
     build: ./publisher
     environment:
-      <<: *config_env
+      ESGF_HOSTNAME:
+      ESGF_DATABASE_HOST: esgf-postgres-esgcet
       ESGF_DATABASE_USER: esgcet
       ESGF_DATABASE_PASSWORD_FILE: /esg/secrets/database-publisher-password
       ESGF_TDS_USERNAME: rootAdmin
@@ -152,9 +153,22 @@ services:
       - esgf-solr-master
 
   esgf-postgres-esgcet:
-    image: "${ESGF_HUB}/${ESGF_PREFIX}postgres-esgcet:${ESGF_VERSION}"
+    image: "${ESGF_HUB}/${ESGF_PREFIX}postgres:${ESGF_VERSION}"
+    restart: always
+    environment:
+      POSTGRESQL_DATABASE: esgcet
+      POSTGRESQL_USER: esgcet
+      POSTGRESQL_PASSWORD_FILE: /esg/secrets/database-publisher-password
+    volumes:
+      - "$ESGF_CONFIG/secrets/database-publisher-password:/esg/secrets/database-publisher-password:ro"
+      - "postgres-esgcet-data:/var/lib/pgsql/data"
+    depends_on:
+      - esgf-postgres
+
+  esgf-postgres-security:
+    image: "${ESGF_HUB}/${ESGF_PREFIX}postgres-security:${ESGF_VERSION}"
     build:
-      context: ./postgres-esgcet
+      context: ./postgres-security
       args:
         ESGF_HUB: $ESGF_HUB
         ESGF_PREFIX: $ESGF_PREFIX
@@ -164,7 +178,6 @@ services:
       POSTGRESQL_DATABASE: esgcet
       POSTGRESQL_USER: dbsuper
       POSTGRESQL_PASSWORD_FILE: /esg/secrets/database-password
-      ESGF_ESGCET_PASSWORD_FILE: /esg/secrets/database-publisher-password
       ESGF_ROOTADMIN_EMAIL: "CoG@${ESGF_HOSTNAME}"
       ESGF_ROOTADMIN_USERNAME: rootAdmin
       ESGF_ROOTADMIN_OPENID: https://${ESGF_HOSTNAME}/esgf-idp/openid/rootAdmin
@@ -172,9 +185,8 @@ services:
     volumes:
       # Mount only the secrets we actually need
       - "$ESGF_CONFIG/secrets/database-password:/esg/secrets/database-password:ro"
-      - "$ESGF_CONFIG/secrets/database-publisher-password:/esg/secrets/database-publisher-password:ro"
       - "$ESGF_CONFIG/secrets/rootadmin-password:/esg/secrets/rootadmin-password:ro"
-      - "postgres-esgcet-data:/var/lib/pgsql/data"
+      - "postgres-security-data:/var/lib/pgsql/data"
     depends_on:
       - esgf-postgres
 
@@ -241,7 +253,7 @@ services:
     depends_on:
       - esgf-configure
       - esgf-tomcat
-      - esgf-postgres-esgcet
+      - esgf-postgres-security
 
   esgf-tds:
     image: "${ESGF_HUB}/${ESGF_PREFIX}tds:${ESGF_VERSION}"
@@ -266,7 +278,6 @@ services:
     depends_on:
       - esgf-configure
       - esgf-tomcat
-      - esgf-postgres-esgcet
 
   esgf-postgres-cog:
     image: "${ESGF_HUB}/${ESGF_PREFIX}postgres:${ESGF_VERSION}"
@@ -308,7 +319,7 @@ services:
     depends_on:
       - esgf-configure
       - esgf-django
-      - esgf-postgres-esgcet
+      - esgf-postgres-security
       - esgf-postgres-cog
 
   esgf-postgres-auth:
@@ -393,7 +404,7 @@ services:
       # ESGF User database
       DJANGO_DATABASE_USERDB_ENGINE: django.db.backends.postgresql
       DJANGO_DATABASE_USERDB_NAME: esgcet
-      DJANGO_DATABASE_USERDB_HOST: esgf-postgres-esgcet
+      DJANGO_DATABASE_USERDB_HOST: esgf-postgres-security
       DJANGO_DATABASE_USERDB_PORT: "5432"
       DJANGO_DATABASE_USERDB_USER: dbsuper
       DJANGO_DATABASE_USERDB_PASSWORD_FILE: /esg/secrets/database-password
@@ -420,7 +431,7 @@ services:
       - "$ESGF_CONFIG/certificates/esg-trust-bundle.pem:/esg/certificates/esg-trust-bundle.pem:ro"
     depends_on:
       - esgf-django
-      - esgf-postgres-esgcet
+      - esgf-postgres-security
       - esgf-postgres-slcs
 
 
@@ -431,6 +442,7 @@ volumes:
   postgres-auth-data:
   postgres-cog-data:
   postgres-esgcet-data:
+  postgres-security-data:
   postgres-slcs-data:
   tds-content:
   slcs-trustroots:
